# random-mac

./: Cargo.toml  README.md
src/: macaddress.rs  main.rs
