[package]
name = "random-mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
erased-serde = "0.3.28"
mac_address = "1.1.5"
clap = { version = "4.3.21", features = ["derive", "cargo"]}
libc = "0.2"
rand = "0.8.5"
directories = "5.0.1"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"